Corrects alignements of headings

--- a/_harp/css/_objects.content.scss
+++ b/_harp/css/_objects.content.scss
@@ -1,7 +1,4 @@
 .content {
-  @include headings() {
-    text-align: center;
-  }
   ul {
     margin:  0;
     padding: 0;
